--- a/api/.env
+++ b/api/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=db559db615b2c0483af4c992f712607f
+APP_SECRET=c7894c95d92ab9db2a5091b1630a59f5
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -25,7 +25,7 @@ APP_SECRET=db559db615b2c0483af4c992f712607f
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/test?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/test"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
