--- a/api/.env
+++ b/api/.env
@@ -25,7 +25,7 @@ APP_SECRET=c7894c95d92ab9db2a5091b1630a59f5
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/test"
+DATABASE_URL="mysql://root:root@127.0.0.1:8889/test"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
