--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,17 @@ node_modules/.cache/
 .angular/cache/16.2.12/angular-webpack/b21d3c0a540e38f38af363516a93eddb4e5fdfb5/2.pack
 .DS_Store
 .angular/cache/16.2.12/angular-webpack/b21d3c0a540e38f38af363516a93eddb4e5fdfb5/3.pack
+
+node_modules/
+
+dist/
+.env
+.DS_Store
+*.log
+
+.angular/
+.angular/cache/
+node_modules/.cache/
+.angular/cache/16.2.12/angular-webpack/b21d3c0a540e38f38af363516a93eddb4e5fdfb5/2.pack
+.DS_Store
+.angular/cache/16.2.12/angular-webpack/b21d3c0a540e38f38af363516a93eddb4e5fdfb5/3.pack
