resolution des problèmes liés au merge

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,27 @@ node_modules/.cache/
 /tslint.json
 /karma.conf.js
 /protracto
+.angular/cache/16.2.12/angular-webpack/b21d3c0a540e38f38af363516a93eddb4e5fdfb5/0.pack
+.angular/cache/16.2.12/angular-webpack/b21d3c0a540e38f38af363516a93eddb4e5fdfb5/1.pack
+.angular/cache/16.2.12/angular-webpack/b21d3c0a540e38f38af363516a93eddb4e5fdfb5/2.pack
+.angular/cache/16.2.12/angular-webpack/b21d3c0a540e38f38af363516a93eddb4e5fdfb5/3.pack
+.angular/cache/16.2.12/angular-webpack/b21d3c0a540e38f38af363516a93eddb4e5fdfb5/4.pack
+.angular/cache/16.2.12/angular-webpack/b21d3c0a540e38f38af363516a93eddb4e5fdfb5/index.pack
+.angular/cache/16.2.12/angular-webpack/b21d3c0a540e38f38af363516a93eddb4e5fdfb5/index.pack.old
+node_modules/.package-lock.json
+node_modules/nice-napi/build/Release/nice_napi.node
+node_modules/node-gyp/gyp/pylib/gyp/__pycache__/__init__.cpython-311.pyc
+node_modules/node-gyp/gyp/pylib/gyp/__pycache__/common.cpython-311.pyc
+node_modules/node-gyp/gyp/pylib/gyp/__pycache__/input.cpython-311.pyc
+node_modules/node-gyp/gyp/pylib/gyp/__pycache__/msvs_emulation.cpython-311.pyc
+node_modules/node-gyp/gyp/pylib/gyp/__pycache__/MSVSUtil.cpython-311.pyc
+node_modules/node-gyp/gyp/pylib/gyp/__pycache__/MSVSVersion.cpython-311.pyc
+node_modules/node-gyp/gyp/pylib/gyp/__pycache__/ninja_syntax.cpython-311.pyc
+node_modules/node-gyp/gyp/pylib/gyp/__pycache__/simple_copy.cpython-311.pyc
+node_modules/node-gyp/gyp/pylib/gyp/__pycache__/xcode_emulation.cpython-311.pyc
+node_modules/node-gyp/gyp/pylib/gyp/__pycache__/xcode_ninja.cpython-311.pyc
+node_modules/node-gyp/gyp/pylib/gyp/__pycache__/xcodeproj_file.cpython-311.pyc
+node_modules/node-gyp/gyp/pylib/gyp/generator/__pycache__/__init__.cpython-311.pyc
+node_modules/node-gyp/gyp/pylib/gyp/generator/__pycache__/make.cpython-311.pyc
+node_modules/node-gyp/gyp/pylib/gyp/generator/__pycache__/ninja.cpython-311.pyc
+node_modules/node-gyp/gyp/pylib/gyp/generator/__pycache__/xcode.cpython-311.pyc
